--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "bootstrap": "^4.1.1",
     "chart.js": "^2.8.0",
     "font-awesome": "^4.7.0",
+    "highcharts": "^7.1.2",
+    "highcharts-react-official": "^2.2.2",
     "node-sass": "^4.12.0",
+    "npm": "^6.10.2",
     "react": "^16.8.6",
     "react-burger-menu": "^1.1.6",
     "react-chartjs-2": "^2.7.6",
@@ -21,6 +24,7 @@
     "react-table": "^6.10.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
+    "start": "^5.1.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
