--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "font-awesome": "^4.7.0",
     "highcharts": "^7.1.2",
@@ -12,6 +12,7 @@
     "node-sass": "^4.12.0",
     "npm": "^6.10.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-burger-menu": "^1.1.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
@@ -22,8 +23,10 @@
     "react-search-box": "^2.0.1",
     "react-sidebar": "^3.0.2",
     "react-table": "^6.10.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
+    "redux-thunk": "^2.3.0",
     "start": "^5.1.0",
     "styled-components": "^4.3.2"
   },
