--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "clsx": "^1.0.4",
     "font-awesome": "^4.7.0",
     "highcharts": "^7.1.2",
     "highcharts-react-official": "^2.2.2",
