--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highcharts-react-official": "^2.2.2",
     "node-sass": "^4.12.0",
     "npm": "^6.10.2",
+    "query-string": "^6.8.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-burger-menu": "^1.1.6",
